switch top flinka nd java 11